fix: icons not displaying on mobile

--- a/client/src/components/TodoItem/TodoItem.css
+++ b/client/src/components/TodoItem/TodoItem.css
@@ -16,6 +16,7 @@
 }
 
 .todo__list-button {
+  display: inline-block;
   width: 2.4rem;
   height: 2.4rem;
 }
